--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>blueneek</title>
+      <title>Net Digital Marketing Agency</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -235,6 +235,91 @@
             </div>
          </div>
          <!-- end second mobile -->
+      <!-- Our Team-->
+         <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="images/cross_img.png" alt="Jane" style="width:100%">
+                <div class="container">
+                  <h2>Jane Doe</h2>
+                  <p class="title">CEO &amp; Founder</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>example@example.com</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          
+            <div class="column">
+              <div class="card">
+                <img src="images/cross_img.png" alt="Mike" style="width:100%">
+                <div class="container">
+                  <h2>Mike Ross</h2>
+                  <p class="title">Art Director</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>example@example.com</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          
+            <div class="column">
+              <div class="card">
+                <img src="images/cross_img.png" alt="John" style="width:100%">
+                <div class="container">
+                  <h2>John Doe</h2>
+                  <p class="title">Designer</p>
+                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                  <p>example@example.com</p>
+                  <p><button class="button">Contact</button></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div class="card">
+              <img src="images/cross_img.png" alt="John" style="width:100%">
+              <div class="container">
+                <h2>John Doe</h2>
+                <p class="title">Designer</p>
+                <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                <p>example@example.com</p>
+                <p><button class="button">Contact</button></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+         <div class="card">
+           <img src="images/cross_img.png" alt="John" style="width:100%">
+           <div class="container">
+             <h2>John Doe</h2>
+             <p class="title">Designer</p>
+             <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+             <p>example@example.com</p>
+             <p><button class="button">Contact</button></p>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="column">
+      <div class="card">
+        <img src="images/cross_img.png" alt="John" style="width:100%">
+        <div class="container">
+          <h2>John Doe</h2>
+          <p class="title">Designer</p>
+          <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+          <p>example@example.com</p>
+          <p><button class="button">Contact</button></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+          <!-- end Our Team--> 
       <!-- clients -->
       <div class="clients">
          <div class="container">
