--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
       <!-- style css -->
       <link rel="stylesheet" href="css/style.css">
       <!-- Responsive-->
+      <!--font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <!--Bootstrap 4-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="css/responsive.css">
-      <!-- fevicon -->
+       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
       <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
@@ -74,7 +79,7 @@
                                     <a class="nav-link" href="contact.html">Contact Us</a>
                                  </li>
                               </ul>
-                              <div class="sign_btn"><a href="#">Get A Quote</a></div>
+                            
                            </div>
                         </nav>
                      </div>
@@ -235,7 +240,7 @@
             </div>
          </div>
          <!-- end second mobile -->
-      <!-- Our Team-->
+         <!-- Our Team-->
          <div class="row">
             <div class="column">
               <div class="card">
